styled scroll bar, added overflow setting and fixed font-size

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -10,19 +10,15 @@ $light-textShadow: 2px 2px 3px white;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 200px;
+  @apply text-sm text-center;
   a {
     text-shadow: $dark-textShadow;
     transition: 1.5s cubic-bezier(0.04, 1.1, 0.51, 0.87);
+    @apply text-xl text-center;
     &:hover {
       @apply text-gray-300;
       text-shadow: none;
     }
-  }
-}
-
-@media (min-width: 640px) {
-  .project-row {
-    background-size: 250px;
   }
 }
 
@@ -99,8 +95,10 @@ $light-textShadow: 2px 2px 3px white;
 
 .ListBlockchain {
   @apply bg-red-400 border-red-600 border-b-2 text-white;
-  background-color: #3b0202;
   opacity: 1;
+  background-color: #3b0202;
+  background-size: 20px 35px;
+  background-repeat: repeat;
   $bg-color-a: #a71027e5;
   $bg-color-b: #ef4f4f55;
   $bg-color-back: transparent;
@@ -152,8 +150,6 @@ $light-textShadow: 2px 2px 3px white;
       $bg-color-b 75%,
       $bg-color-b
     );
-  background-size: 20px 35px;
-  background-repeat: repeat;
   background-position:
     0 0,
     0 0,
@@ -200,4 +196,53 @@ $light-textShadow: 2px 2px 3px white;
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+
+@media (min-width: 640px /* sm */) {
+  .project-row {
+    background-size: 250px;
+    @apply text-base;
+
+    a {
+      @apply text-2xl;
+    }
+  }
+
+  .SVG {
+    background-origin: content-box;
+    background-position-y: 65%;
+  }
+
+  .ListBlockchain {
+    background-size: 20px 35px;
+  }
+
+  .ListAnimations {
+    background-size: cover;
+  }
+
+  .Blockchain {
+    background-size: 250% 250%;
+  }
+}
+
+@media (min-width: 768px /* md */) {
+  .project-row {
+    @apply text-lg;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 0.75rem;
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background: #00000022;
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #00000055;
+  border-radius: 1rem;
 }
